--- a/App/wwwroot/fonts/fontello-9763c66f/demo.html
+++ b/App/wwwroot/fonts/fontello-9763c66f/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?46735912');
-      src: url('./font/fontello.eot?46735912#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?46735912') format('woff'),
-           url('./font/fontello.ttf?46735912') format('truetype'),
-           url('./font/fontello.svg?46735912#fontello') format('svg');
+      src: url('./font/fontello.eot?47020328');
+      src: url('./font/fontello.eot?47020328#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?47020328') format('woff'),
+           url('./font/fontello.ttf?47020328') format('truetype'),
+           url('./font/fontello.svg?47020328#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -214,12 +214,17 @@
         <div class="span3" title="Code: 0xe800">
           <i class="demo-icon icon-basket">&#xe800;</i> <span class="i-name">icon-basket</span><span class="i-code">0xe800</span>
         </div>
-        <div class="span3" title="Code: 0xf09a">
-          <i class="demo-icon icon-facebook">&#xf09a;</i> <span class="i-name">icon-facebook</span><span class="i-code">0xf09a</span>
+        <div class="span3" title="Code: 0xe801">
+          <i class="demo-icon icon-star">&#xe801;</i> <span class="i-name">icon-star</span><span class="i-code">0xe801</span>
         </div>
-        <div class="span3" title="Code: 0xf1a0">
-          <i class="demo-icon icon-google">&#xf1a0;</i> <span class="i-name">icon-google</span><span class="i-code">0xf1a0</span>
+        <div class="span3" title="Code: 0xe802">
+          <i class="demo-icon icon-star-empty">&#xe802;</i> <span class="i-name">icon-star-empty</span><span class="i-code">0xe802</span>
         </div>
+        <div class="span3" title="Code: 0xf123">
+          <i class="demo-icon icon-star-half-alt">&#xf123;</i> <span class="i-name">icon-star-half-alt</span><span class="i-code">0xf123</span>
+        </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf2be">
           <i class="demo-icon icon-user-circle-o">&#xf2be;</i> <span class="i-name">icon-user-circle-o</span><span class="i-code">0xf2be</span>
         </div>
