--- a/App/wwwroot/fonts/fontello-82b3d7a7/demo.html
+++ b/App/wwwroot/fonts/fontello-82b3d7a7/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?47020328');
-      src: url('./font/fontello.eot?47020328#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?47020328') format('woff'),
-           url('./font/fontello.ttf?47020328') format('truetype'),
-           url('./font/fontello.svg?47020328#fontello') format('svg');
+      src: url('./font/fontello.eot?24686554');
+      src: url('./font/fontello.eot?24686554#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?24686554') format('woff'),
+           url('./font/fontello.ttf?24686554') format('truetype'),
+           url('./font/fontello.svg?24686554#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -220,11 +220,17 @@
         <div class="span3" title="Code: 0xe802">
           <i class="demo-icon icon-star-empty">&#xe802;</i> <span class="i-name">icon-star-empty</span><span class="i-code">0xe802</span>
         </div>
-        <div class="span3" title="Code: 0xf123">
-          <i class="demo-icon icon-star-half-alt">&#xf123;</i> <span class="i-name">icon-star-half-alt</span><span class="i-code">0xf123</span>
+        <div class="span3" title="Code: 0xe803">
+          <i class="demo-icon icon-cancel-1">&#xe803;</i> <span class="i-name">icon-cancel-1</span><span class="i-code">0xe803</span>
         </div>
       </div>
       <div class="row">
+        <div class="span3" title="Code: 0xe806">
+          <i class="demo-icon icon-cancel">&#xe806;</i> <span class="i-name">icon-cancel</span><span class="i-code">0xe806</span>
+        </div>
+        <div class="span3" title="Code: 0xf123">
+          <i class="demo-icon icon-star-half-alt">&#xf123;</i> <span class="i-name">icon-star-half-alt</span><span class="i-code">0xf123</span>
+        </div>
         <div class="span3" title="Code: 0xf2be">
           <i class="demo-icon icon-user-circle-o">&#xf2be;</i> <span class="i-name">icon-user-circle-o</span><span class="i-code">0xf2be</span>
         </div>
